--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@
     line-height: 1.14px;
     letter-spacing: 16%;
     text-align: left;
-    color: var(--color-negro);
+    color: #212121
 }
 
 .EstudioTitulo:hover{
-    color: var(--color-blue);
+    color: #2196F3
 }
 
 .PortafolioTitulo{
