--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     letter-spacing: 3%;
     text-align: right;
     text-decoration: none;
-    color: var(--color-blue);
+    color: #2196F3
     
 
 }
