--- a/style.css
+++ b/style.css
@@ -2,20 +2,58 @@
  *{
     text-decoration: none;
     list-style: none;
+    box-sizing: border-box;
+}
+
+section{
+    padding: auto;
+    margin: auto;
 }
 
 .Web-Studio{
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.15px;
     letter-spacing: 3%;
-    text-align: right;
+    text-align: center;
     text-decoration: none;
-    color: #2196F3
+    color: #2196F3;
 }
 
-.EstudioTitulo{
+
+.content-1 .container {
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    height: 88px; 
+}
+
+ol{
+    display: inline-block;
+}
+
+.content-1 li{
+    float: left;
+    margin-right: 20px;
+    
+}
+
+.Estudio{
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14px;
+    letter-spacing: 16%;
+    text-align: left;
+    color: #2196F3;
+}
+
+.Portafolio, 
+.Contactos{
+    display: block;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 500;
@@ -25,38 +63,14 @@
     color: #212121
 }
 
-.EstudioTitulo:hover{
+.Estudio:hover, 
+.Portafolio:hover, 
+.Contactos:hover{
     color: #2196F3
 }
 
-.PortafolioTitulo{
-    font-family: 'Roboto', sans-serif; 
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14px;
-    letter-spacing: 16%;
-    text-align: left;
-    color: var(--color-negro);
-}
-.PortafolioTitulo:hover{
-    color: #2196F3;
-}
-
-.ContactosTitulo{
-    font-family: 'Roboto', sans-serif; 
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14px;
-    letter-spacing: 16%;
-    text-align: left;
-    color:#212121;
-}
-
-.ContactosTitulo:hover{
-    color: #2196F3;
-}
-
-.mail1{
+.mail1, 
+.telf{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 500;
@@ -66,273 +80,188 @@
     color: #757575
 }
 
-.mail1:hover{
+.mail1:hover, .telf:hover{
     color: #2196F3;
 }
 
-.tel1{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14px;
-    letter-spacing: 16%;
-    text-align: left;
-    color: #757575;
 
-}
-
-.tel1:hover{
-    color: #2196F3;
-}
-
-.TITULO-PRINCIPAL{
-    font-family: 'Roboto', sans-serif;
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 136px;
-    letter-spacing: 6%;
-    text-align: center;
-    color: #ffffff;
-}
-
-.ButtonElement{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.87px;
-    letter-spacing: 6%;
-    text-align: center;
-    color: #ffffff;
-}
-
-.backspace2{
+.content-2 .container {
     background-color: #2F303A;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.espacioDelBoton button{
+.content-2 h1 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    
+}
+
+.content-2 button {
     background-color: #2196F3;
-    color: #ffffff;
-    border: none;
-    height: 50px;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
     width: 261px;
-    left: 666px;
-    top: 430px;
-    border-radius: 4px;
-    padding: 10px 32px 10px 32px;
+    height: 50px;
+    border: none;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.content-2 .ul-1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-3 .container{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+    margin-top: 100px;
+}
+
+.content-3 .container .txt-1{
+    width: 270px;
+    vertical-align: top;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    margin-top: 15px;
+}
+
+.txt-1 h2{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400px;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 3%;
 
 }
 
-.Atencion{
+.txt-1 p{
     font-family: 'Roboto', sans-serif;
-    font-weight: 700px;
+    font-weight: 400px;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 24px;
     letter-spacing: 3%;
+    color: #757575;;
+}
+
+.content-4 .container{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.container .TITULE-2H{
+    font-size: 36px;
+    font-style: bold;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    padding-top: 20px;
+    clear: both;
+}
+
+.container ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.container .img-1{
+    margin: 15px;
+    width: 373px;
+    height: 323px;
+    margin-top: 80px;
+}
+
+.content-5 .container {
+    text-align: center;
+    margin-top: 80px;
+    background-color:#F5F4FA
+    ;
+
+}
+
+.content-5 .ourT-3 h2 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    padding-top: 20px;
     color: #212121;
 }
 
-.TEXT-AT{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400px;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 3%;
+.container .card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border: 0.1px solid #ccc;
+    box-sizing: border-box;
+    margin: 20px;
+    box-shadow: 0px 1px 3px;
+    margin-top: 80px;
+    padding-bottom: 50px;
 
 }
 
-.Puntualidad{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 3%;
-    
-}
-
-.TEXT-P{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400px;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 3%;
-}
-
-.PLANIFICACION{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 3%;
-    
-}
-
-.TEXT-P2{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400px;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 3%;
-}
-
-.TEGNOLOGIA{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 3%;
-
-}
-
-.TEXT-T{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400px;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 3%;
-}
-
-.TITULE-2H{
-    font-family: 'Roboto', sans-serif;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: 3%;
-
-}
-
-.TITULE-3{
-    font-family: 'Roboto', sans-serif;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: 3%;
-
-}
-
-.Andresh3{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
+.container .card .card-content {
     text-align: center;
-
+    
 }
 
-.diseñadorAN{
-    font-family: 'Roboto', sans-serif;
+.container .card h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
     font-size: 16px;
+    line-height: 19px;
+    color: #212121;
+    margin-top: 25px;
+}
+
+.container .card p {
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-
-}
-.carlah3{
-    font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    font-weight: 500;
     line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-
+    letter-spacing: 0.03em;
+    color: #757575;
+    margin-top: 15px;
 }
 
-.desaCar{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
+.container .card img {
+    margin-bottom: 5px;
 }
 
-.MarioH3{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-}
-
-.marketMa{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-}
-
-.PabloMI{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-}
-
-.DiseñaPablo{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 3%;
-    text-align: center;
-}
-
-.background-1{
+.content-6 .container{
     background-color: #2F303A;
 }
 
-.link{
-    font-family: 'Roboto', sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 31px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #2196F3;
-}
-#Ubi_contacts{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+.Direccion address{
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 400;
+    font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    text-align: left;
-    color: #ffffff
-}
-
-#Ubi_contacts:hover{
-    color: #2196F3;
-}
-
-.mail2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14px;
-    letter-spacing: 16%;
-    text-align: left;
-    color: #757575
-}
-.mail2:hover{
-    color: #2196F3;
-}
-
-.tel2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14px;
-    letter-spacing: 16%;
-    text-align: left;
-    color: #757575;
-}
-
-.tel2:hover{
-    color: #2196F3;
+    color: #FFFFFF;
+    width: 231px;
 }
