--- a/style2.css
+++ b/style2.css
@@ -3,396 +3,224 @@
 *{
     list-style: none;
     text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
-.Web2{
+
+.Portafolio-2{
+    display: block;
     font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14px;
+    letter-spacing: 16%;
+    text-align: left;
+    color: #2196F3;
+}
+
+.Estudio-2,
+.Contactos-2{
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14px;
+    letter-spacing: 16%;
+    text-align: left;
+    color: #212121
+}
+
+.Estudio-2:hover, 
+.Portafolio-2:hover, 
+.Contactos-2:hover{
+    color: #2196F3
+}
+
+
+.mail1-2, 
+.telf-2{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14px;
+    letter-spacing: 16%;
+    text-align: left;
+    color: #757575
+}
+
+.mail1-2:hover, 
+.telf-2:hover{
+    color: #2196F3;
+}
+
+
+.content-7 
+.container{
+
+}
+
+.content-7 .container .boton button{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    background: #F5F4FA;
+    border-radius: 4px;
+    margin: 3px;
+    cursor: pointer;
+    border: 0px;
+
+}
+
+.container .boton button:focus{
+    background-color: #2196f3;
+    color: #FFFFFF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+}
+
+.content-8 .contenedor .texto-imagen h2{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: #212121;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.content-8 .contenedor .texto-imagen h2{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: #212121;
+    text-align: left;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.content-8 .contenedor .texto-imagen p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: #757575;
+    text-align: left;
+    margin-left: 15px;
+    margin-top: 18px;
+}
+
+.content-8 .contenedor .texto-imagen p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: #757575;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.contenedor {
+    display: inline-block;
+    margin: 15px;
+    margin-bottom: 10px;
+    vertical-align: top;
+    max-width: 100%;
+    width: 372.5px;
+    height: auto;
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.contenedor-all-main{
+    width: 1217px;
+    height: 1360px;
+}
+
+.content-9{
+    background-color: #2F303A
+    ;
+    width: 1200px;
+    height: 252px;
+}
+
+.content-9 .Web-Studio-2 a{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
     font-size: 26px;
-    font-weight: 700;
     line-height: 31px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #2196f3;
-
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    
 }
 
-.Study2{
-    font-family: 'Roboto', sans-serif;
+.content-9 .direccion-2 p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 2%;
-    text-align: left;
-    color: #212121;
-}
-.Study2:hover{
-    color: #2196f3;
-}
-
-.Porta2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 2%;
-    text-align: left;
-    color: #212121;
-}
-.Porta2:hover{
-    color: #2196f3;
-}
-
-.Conta2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 2%;
-    text-align: left;
-    color: #212121;
-}
-
-.Conta2:hover{
-    color: #2196f3;
-}
-
-.Mail-2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: #757575;
-}
-
-.Mail-2:hover{
-    color: #2196f3;
-}
-
-.Tel-2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: #757575;
-}
-
-.Tel-2:hover{
-    color: #2196f3;
-}
-
-.todo{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    letter-spacing: 3%;
-    text-align: center;
-    color: #212121;
-    border: none;
-}
-
-.todo:focus{
-    background-color: #2196f3;
-    color: #FFFFFF;
-}
-
-.Sitios{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    letter-spacing: 3%;
-    text-align: center;
-    color: #212121;
-    border: none;
-}
-
-.Sitios:focus{
-    background-color: #2196f3;
-    color: #FFFFFF;
-}
-
-.Apps{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    letter-spacing: 3%;
-    text-align: center;
-    color: #212121;
-    border: none;
-}
-
-.Apps:focus{
-    background-color: #2196f3;
-    color: #FFFFFF;
-}
-
-.Diseño{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    letter-spacing: 3%;
-    text-align: center;
-    color: #212121;
-    border: none;
-}
-
-.Diseño:focus{
-    background-color: #2196f3;
-    color: #FFFFFF;
-}
-
-.Marketing{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 26px;
-    letter-spacing: 3%;
-    text-align: center;
-    color: #212121;
-    border: none;
-}
-
-.Marketing:focus{
-    background-color: #2196f3;
-    color: #FFFFFF;
-}
-
-.Tecno{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.SitioWeb{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-}
-
-.PNO{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Restau{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-
-}
-
-.AppsText{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-
-}
-
-.ProyectPrime{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Marketing-Text{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-
-}
-
-.ProyectoCajas{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Apps-text2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-
-}
-
-.inspi-text{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Sitios-Text{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-}
-
-.EdicionLi{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Diseño-Text{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-}
-
-.Proyecto-LAB{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Market-Text2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-}
-
-.NegocioDC{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 6%;
-    text-align: left;
-    color: #212121;
-}
-
-.Apps-textFinish{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 3%;
-    text-align: left;
-    color: #757575;
-}
-
-#Ubi_contacts_2{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
-    letter-spacing: 3%;
-    text-align: left;
+    letter-spacing: 0.03em;
     color: #FFFFFF;
+    width: 231px;
+    height: 21px;
 }
 
-.Encuentranos-en{
-    font-family: 'Roboto', sans-serif;
+.content-9 .email a{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    width: 231px;
+    height: 21px;
+}
+
+.content-9 .telf-1 a{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    width: 231px;
+    height: 21px;
+}
+
+.content-9 .Ubi h4{
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 700;
+    font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.03em;
-    text-align: left;
+    text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.Icono1{
+.content-9 .iconos img{
+
     position: absolute;
+    width: 206px;
     height: 44px;
-    width: 44px;
-    left: 516px;
-    top: 1739px;
-    border-radius: 0px;
-
-}
-
-.Icono2{
-    position: absolute;
-    height: 44px;
-    width: 44px;
-    left: 570px;
-    top: 1739px;
-    border-radius: 0px;
-
-}
-
-.Icono3{
-    position: absolute;
-    height: 44px;
-    width: 44px;
-    left: 624px;
-    top: 1739px;
-    border-radius: 0px;
-
-}
-
-.icono4{
-    position: absolute;
-    height: 44px;
-    width: 44px;
-    left: 678px;
-    top: 1739px;
-    border-radius: 0px;
 
 }
